Main menu styles

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="logo">
                     <img src="img/logo.png" class="logo-img" alt="">
                 </div>
-                <div class="navegacion">
+                <nav class="navegacion">
                     <ul>
                         <li>
                             <a href="#">Inicio</a>
@@ -35,7 +35,7 @@
                             <a href="#">Contacto</a>
                         </li>
                     </ul>
-                </div>
+                </nav>
             </div>
         </div>
         <!--.barra-->
