--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Cards Flexbox</title>
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.0/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
 
 </head>
@@ -105,6 +106,31 @@
             </article>
         </main>
 
+        <div class="categorias">
+            <ul>
+                <li>
+                    <a href="#">
+                        <i class="fas fa-map-pin"></i> Actividades
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fas fa-music"></i> Festivales
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fas fa-utensils"></i> Restaurants
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fas fa-check"></i> Tips
+                    </a>
+                </li>
+
+            </ul>
+        </div>
 
     </div>
     <!--.contenido-->
