--- a/index.html
+++ b/index.html
@@ -135,6 +135,46 @@
     </div>
     <!--.contenido-->
 
+    <footer class="footer">
+        <div class="contenedor">
+            <div class="nosotros caja">
+                <h2>Sobre nosotros</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quod tempora sit voluptate dolorum tempore numquam veritatis, architecto dolore labore maiores consequuntur culpa, soluta ratione ullam eligendi earum aliquam aliquid.</p>
+            </div>
+            <div class="entradas caja">
+                <h2>Ultimas entradas</h2>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+            </div>
+            <div class="siguenos caja">
+                <h2>Síguenos</h2>
+                <nav class="sociales">
+                    <ul>
+                        <li>
+                            <a href="http://facebook.com"><span> Facebook</span></a>
+                        </li>
+                        <li>
+                            <a href="http://twitter.com"><span> Twitter</span></a>
+                        </li>
+                        <li>
+                            <a href="http://youtube.com"><span> YouTube</span></a>
+                        </li>
+                        <li>
+                            <a href="http://instagram.com"><span> Instagram</span></a>
+                        </li>
+                        <li>
+                            <a href="http://pinterest.com"><span> Pinterest</span></a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <p class="copyright">Blog de Viajes. Flexbox 2018 &copy;</p>
+    </footer>
+
 </body>
 
 </html>
